--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мой новый сайт</title>
-    <link rel="stylesheet" href="style 2.css">
+    <link rel="stylesheet" href="style 222222222222222.css">
 <HEAD
     <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,900,900,900,900&display=swap" rel="stylesheet" />"
 
